# UIGS

./: .gitignore  Makefile  README.md  docker-compose.yml
data/samples/: vc-employment.json  vc-government-id.json  vc-university-degree.json
docs/: SETUP_GUIDE.txt  abstract.txt  architecture_design.txt  idea.md  implementation_plan.txt  introduction.txt  literature_survey_extended.txt  phase1_report.txt  phase2_report.txt  project_phase_plan.txt  srs.txt  survey.md
infra/docker/postgres/: init.sql
services/frontend/: package-lock.json  package.json
services/frontend/src/app/: layout.tsx  page.tsx
services/frontend/src/hooks/: useGraph.ts
services/frontend/src/lib/: api-client.ts  graphql-client.ts
services/frontend/src/types/: graph.ts
services/graph-engine/: Dockerfile  main.py  pyproject.toml  requirements.txt
services/graph-engine/app/: __init__.py  config.py
services/graph-engine/app/api/: __init__.py  resolvers.py  schema.py
services/graph-engine/app/consumer/: __init__.py  rabbitmq_consumer.py
services/graph-engine/app/graph/: __init__.py  conflict_detector.py  decomposer.py  neo4j_client.py
services/graph-engine/app/models/: __init__.py  credential.py  edge.py  node.py
services/graph-engine/tests/: __init__.py  test_graph.py
services/ingestion/: Dockerfile  go.mod  go.sum
services/ingestion/cmd/server/: main.go
services/ingestion/internal/config/: config.go
services/ingestion/internal/handlers/: health.go  ingest.go
services/ingestion/internal/middleware/: middleware.go
services/ingestion/internal/models/: credential.go  (+1 more)
(+13 files in other folders)
